NJU-ProjectN/nvboard master initialized without tracing
NJU-ProjectN/nvboard 13d8822e3bb93bc06a13dc6367127b16f41bf44a Merge pull request #25 from xinyangli/include-optimise

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -1,8 +1,9 @@
 all:
 	@echo "Write this Makefile by your self."
 
-sim:
+sim:	*.cpp *.v
 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
 	@echo "Write this Makefile by your self."
+	verilator --cc --exe --build -j 0 -Wall *.cpp *.v
 
 include ../Makefile
