before starting pa2

--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -215,3 +215,9 @@ config RT_CHECK
   default y
 
 endmenu
+
+config WATCHPOINT                //added Watchpoint config here
+  bool "Enable watchpoint"
+  default n
+  help
+    Enable watchpoint feature to monitor memory access.
